--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "bluebird": "3.7.2",
     "cheerio": "1.0.0-rc.3",
-    "superagent": "5.2.2"
+    "superagent": "5.2.2",
+    "lodash": "4.17.21"
   },
   "devDependencies": {
     "jsonschema": "1.2.5",
